--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@acryl/ts-lib-crypto": "^1.1.5",
     "@types/node": "^12.7.5",
     "axios": "^0.19.0",
-    "lodash.where": "^3.1.0"
+    "lodash.where": "^3.1.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
-    "aws-sdk": "^2.529.0",
-    "typescript": "^3.6.3"
+    "aws-sdk": "^2.529.0"
   }
 }
